@@ -4,9 +4,14 @@ exams2tcexam <- function(file, n = 1L, nsamp = NULL, dir = ".",
   resolution = 100, width = 4, height = 4, encoding = "", points = NULL,
   modulename = name, subjectname = name, subjectdescription = NULL, timer = 0,
   fullscreen = FALSE, inlineanswers = FALSE, autonext = FALSE, shuffle = TRUE,
-  lang = "en", date = Sys.time(), zip = FALSE, converter = "ttm", ...)
+  lang = "en", date = Sys.time(), zip = FALSE, converter = NULL, ...)
 {
   ## set up .html transformer
+  if(any(tolower(tools::file_ext(unlist(file))) == "rmd")) {
+    if(is.null(converter)) converter <- "pandoc"
+  } else {
+    if(is.null(converter)) converter <- "ttm"
+  }
   htmltransform <- make_exercise_transform_html(converter = converter, ..., base64 = TRUE)
 
   ## generate the exam
@@ -107,7 +112,27 @@ exams2tcexam <- function(file, n = 1L, nsamp = NULL, dir = ".",
   invisible(exm)
 }
 
-fix_html_tcexam <- function(x, collapse = " ") {
+fix_html_tcexam <- function(x, collapse = " ")
+{
+  ## collapse <pre>-formatted code
+  pre1 <- grep("<pre>", x, fixed = TRUE)
+  pre2 <- grep("</pre>", x, fixed = TRUE)
+  if(length(pre1) != length(pre2)) warning("cannot properly fix <pre> tags")
+  if(length(pre1) > 0L) {
+    for(i in length(pre1):1L) {
+      p1 <- pre1[i]
+      p2 <- pre2[i]
+      if(p2 > p1) {
+        x[p1] <- paste(x[p1:p2], collapse = "\n")
+	x <- x[-((p1 + 1L):p2)]
+      }
+    }
+  }
+    
+  ## collapse everything else
+  x <- paste(x, collapse = collapse)
+
+  ## fix up HTML formatting for TCExam
   fix <- rbind(
     c("<i>", "[i]"),
     c("</i>", "[/i]"),
@@ -125,9 +150,11 @@ fix_html_tcexam <- function(x, collapse = " ") {
     c("</ol>", "[/olist]"),
     c("<li>", "[li]"),
     c("</li>", "[/li]"),
+    c("<code>", ""), ## FIXME
+    c("</code>", ""),
     c("<pre>", "[code]"),
     c("</pre>", "[/code]"),
-    c("<table>", "[html]<table>"),
+    c("<table", "[html]<table"),
     c("</table>", "</table>[/html]"),
     c("<h1>", "[html]<h1>"),
     c("</h1>", "</h1>[/html]"),
@@ -136,18 +163,24 @@ fix_html_tcexam <- function(x, collapse = " ") {
     c("<h3>", "[html]<h3>"),
     c("</h3>", "</h3>[/html]"),
     c("&nbsp;", " "),
+    c("<p>", ""),
+    c("</p>", "\n"),
     c("<br/>", "\n"),
-    c("<math xmlns", "[mathml]<math xmlns"),
+    c("<br />", "\n"),
+    c("<math ", "[mathml]<math "),
     c("</math>", "</math>[/mathml]"),
     c("<img", "[html]<img"),
     c("/>", "/>[/html]"),
     c("<div class=\"p\"><!----></div>", "\n"),
+    c("<div style=\"text-align:center\">", "\n"),
+    c("</div>", ""),
     c("&", "&amp;"),
     c("<", "&lt;"),
-    c(">", "&gt;")
+    c(">", "&gt;"),
+    c("&amp;#", "&#")
   )
-  x <- paste(x, collapse = collapse)
   for(i in 1:nrow(fix)) x <- gsub(fix[i,1], fix[i,2], x, fixed = TRUE)
+
   return(x)
 }
 
